--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <Header>
             <img src="./logo/1.png" alt="">
             <H1></H1>
-            <p>Funcionamento das 06:00 ás 18:00</p>
+            <p>Funcionamento em breve</p>
             <h2>Contatos</h2>
             <p> (75) 9 9884-3887 </p>
             <p> (75) 9 9915-8603 </p>
